--- a/index.html
+++ b/index.html
@@ -19,17 +19,28 @@
 
 
 
+
+
     <script>
         const { createApp } = Vue
 
         createApp({
             data() {
                 return {
-                    message: 'Ciao Vue, il cugino gentile di Javascript!'
+                    message: 'Ciao sono Vue, il cugino gentile di Javascript!'
+
+
                 }
+
+
             }
         }).mount('#app')
     </script>
+
+
+
+
+
 
 
 
